src/main/java/com/cyberthinkers/tools/generate/GenScalaFacadesFromTypescriptParser.java
// Generated from C:/cyberthinkers-dev/typescript-to-scala-js-facade/src/main/antlr4\GenScalaFacadesFromTypescript.g4 by ANTLR 4.6
package com.cyberthinkers.tools.generate;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GenScalaFacadesFromTypescriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, LineTerminator=2, Abstract=3, As=4, Class=5, Const=6, Constructor=7, 
		Declare=8, Enum=9, Export=10, Extends=11, From=12, Function=13, Implements=14, 
		Import=15, Interface=16, Keyof=17, Let=18, Module=19, Var=20, In=21, Is=22, 
		Public=23, Protected=24, Private=25, Static=26, Readonly=27, New=28, Typeof=29, 
		This=30, Type=31, Number=32, String=33, ThickArrow=34, DotDotDot=35, OpenBracket=36, 
		CloseBracket=37, OpenParen=38, CloseParen=39, OpenBrace=40, CloseBrace=41, 
		SemiColon=42, Comma=43, Assign=44, QuestionMark=45, Colon=46, Dot=47, 
		PlusPlus=48, MinusMinus=49, Plus=50, Minus=51, BitNot=52, Not=53, Multiply=54, 
		Divide=55, Modulus=56, LessThan=57, MoreThan=58, LessThanEquals=59, GreaterThanEquals=60, 
		Equals=61, NotEquals=62, IdentityEquals=63, IdentityNotEquals=64, BitAnd=65, 
		BitXOr=66, BitOr=67, And=68, Or=69, MultiplyAssign=70, DivideAssign=71, 
		ModulusAssign=72, PlusAssign=73, MinusAssign=74, LeftShiftArithmeticAssign=75, 
		RightShiftArithmeticAssign=76, RightShiftLogicalAssign=77, BitAndAssign=78, 
		BitXorAssign=79, BitOrAssign=80, BooleanLiteral=81, DecimalLiteral=82, 
		HexIntegerLiteral=83, OctalIntegerLiteral=84, Identifier=85, StringLiteral=86, 
		WS=87, Documentation=88, Comment=89, LineComment=90;
	public static final int
		RULE_typescriptAmbientDeclarations = 0, RULE_declarationScriptElement = 1, 
		RULE_exportDef = 2, RULE_importDef = 3, RULE_importName = 4, RULE_ambientModuleOrNamespace = 5, 
		RULE_ambientItem = 6, RULE_ambientBracesItem = 7, RULE_ambientStatement = 8, 
		RULE_variableDeclaration = 9, RULE_variableList = 10, RULE_variableName = 11, 
		RULE_functionDeclaration = 12, RULE_classDeclaration = 13, RULE_ambientClassBodyElement = 14, 
		RULE_ambientConstructorDeclaration = 15, RULE_ambientPropertyMemberDeclaration = 16, 
		RULE_exportIdentifier = 17, RULE_numericLiteral = 18, RULE_typeDeclaration = 19, 
		RULE_typeDef = 20, RULE_typeParameters = 21, RULE_typeParameterList = 22, 
		RULE_typeParameter = 23, RULE_constraint = 24, RULE_typeArguments = 25, 
		RULE_typeArgumentList = 26, RULE_type = 27, RULE_unnamedInterface = 28, 
		RULE_unionOrIntersectionOrPrimaryType = 29, RULE_primaryOrArray = 30, 
		RULE_nestedType = 31, RULE_arrayDim = 32, RULE_primaryType = 33, RULE_typeGuard = 34, 
		RULE_parenthesizedType = 35, RULE_typeReference = 36, RULE_objectType = 37, 
		RULE_typeBody = 38, RULE_typeMemberList = 39, RULE_typeMember = 40, RULE_tupleType = 41, 
		RULE_tupleTypeElements = 42, RULE_functionType = 43, RULE_constructorType = 44, 
		RULE_typeQuery = 45, RULE_thisType = 46, RULE_propertySignature = 47, 
		RULE_typeAnnotation = 48, RULE_callSignature = 49, RULE_parameterList = 50, 
		RULE_requiredParameterList = 51, RULE_requiredParameter = 52, RULE_accessibilityModifier = 53, 
		RULE_optionalParameterList = 54, RULE_optionalParameter = 55, RULE_restParameter = 56, 
		RULE_constructSignature = 57, RULE_indexSignature = 58, RULE_methodSignature = 59, 
		RULE_constExpression = 60, RULE_interfaceDeclaration = 61, RULE_extendsClause = 62, 
		RULE_classOrInterfaceTypeList = 63, RULE_classHeritage = 64, RULE_implementsClause = 65, 
		RULE_enumDeclaration = 66, RULE_enumBody = 67, RULE_enumMemberList = 68, 
		RULE_enumMember = 69, RULE_enumValue = 70, RULE_identifierPath = 71, RULE_bindingIdentifier = 72, 
		RULE_identifier = 73, RULE_lineEnd = 74;
	public static final String[] ruleNames = {
		"typescriptAmbientDeclarations", "declarationScriptElement", "exportDef", 
		"importDef", "importName", "ambientModuleOrNamespace", "ambientItem", 
		"ambientBracesItem", "ambientStatement", "variableDeclaration", "variableList", 
		"variableName", "functionDeclaration", "classDeclaration", "ambientClassBodyElement", 
		"ambientConstructorDeclaration", "ambientPropertyMemberDeclaration", "exportIdentifier", 
		"numericLiteral", "typeDeclaration", "typeDef", "typeParameters", "typeParameterList", 
		"typeParameter", "constraint", "typeArguments", "typeArgumentList", "type", 
		"unnamedInterface", "unionOrIntersectionOrPrimaryType", "primaryOrArray", 
		"nestedType", "arrayDim", "primaryType", "typeGuard", "parenthesizedType", 
		"typeReference", "objectType", "typeBody", "typeMemberList", "typeMember", 
		"tupleType", "tupleTypeElements", "functionType", "constructorType", "typeQuery", 
		"thisType", "propertySignature", "typeAnnotation", "callSignature", "parameterList", 
		"requiredParameterList", "requiredParameter", "accessibilityModifier", 
		"optionalParameterList", "optionalParameter", "restParameter", "constructSignature", 
		"indexSignature", "methodSignature", "constExpression", "interfaceDeclaration", 
		"extendsClause", "classOrInterfaceTypeList", "classHeritage", "implementsClause", 
		"enumDeclaration", "enumBody", "enumMemberList", "enumMember", "enumValue", 
		"identifierPath", "bindingIdentifier", "identifier", "lineEnd"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'namespace'", null, "'abstract'", "'as'", "'class'", "'const'", 
		"'constructor'", "'declare'", "'enum'", "'export'", "'extends'", "'from'", 
		"'function'", "'implements'", "'import'", "'interface'", "'keyof'", "'let'", 
		"'module'", "'var'", "'in'", "'is'", "'public'", "'protected'", "'private'", 
		"'static'", "'readonly'", "'new'", "'typeof'", "'this'", "'type'", "'number'", 
		"'string'", "'=>'", "'...'", "'['", "']'", "'('", "')'", "'{'", "'}'", 
		"';'", "','", "'='", "'?'", "':'", "'.'", "'++'", "'--'", "'+'", "'-'", 
		"'~'", "'!'", "'*'", "'/'", "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", 
		"'!='", "'==='", "'!=='", "'&'", "'^'", "'|'", "'&&'", "'||'", "'*='", 
		"'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'>>>='", "'&='", "'^='", 
		"'|='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "LineTerminator", "Abstract", "As", "Class", "Const", "Constructor", 
		"Declare", "Enum", "Export", "Extends", "From", "Function", "Implements", 
		"Import", "Interface", "Keyof", "Let", "Module", "Var", "In", "Is", "Public", 
		"Protected", "Private", "Static", "Readonly", "New", "Typeof", "This", 
		"Type", "Number", "String", "ThickArrow", "DotDotDot", "OpenBracket", 
		"CloseBracket", "OpenParen", "CloseParen", "OpenBrace", "CloseBrace", 
		"SemiColon", "Comma", "Assign", "QuestionMark", "Colon", "Dot", "PlusPlus", 
		"MinusMinus", "Plus", "Minus", "BitNot", "Not", "Multiply", "Divide", 
		"Modulus", "LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals", 
		"Equals", "NotEquals", "IdentityEquals", "IdentityNotEquals", "BitAnd", 
		"BitXOr", "BitOr", "And", "Or", "MultiplyAssign", "DivideAssign", "ModulusAssign", 
		"PlusAssign", "MinusAssign", "LeftShiftArithmeticAssign", "RightShiftArithmeticAssign", 
		"RightShiftLogicalAssign", "BitAndAssign", "BitXorAssign", "BitOrAssign", 
		"BooleanLiteral", "DecimalLiteral", "HexIntegerLiteral", "OctalIntegerLiteral", 
		"Identifier", "StringLiteral", "WS", "Documentation", "Comment", "LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GenScalaFacadesFromTypescript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GenScalaFacadesFromTypescriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TypescriptAmbientDeclarationsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GenScalaFacadesFromTypescriptParser.EOF, 0); }
		public List<DeclarationScriptElementContext> declarationScriptElement() {
			return getRuleContexts(DeclarationScriptElementContext.class);
		}
		public DeclarationScriptElementContext declarationScriptElement(int i) {
			return getRuleContext(DeclarationScriptElementContext.class,i);
		}
		public TypescriptAmbientDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typescriptAmbientDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GenScalaFacadesFromTypescriptListener ) ((GenScalaFacadesFromTypescriptListener)listener).enterTypescriptAmbientDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GenScalaFacadesFromTypescriptListener ) ((GenScalaFacadesFromTypescriptListener)listener).exitTypescriptAmbientDeclarations(this);
		}
	}

	public final TypescriptAmbientDeclarationsContext typescriptAmbientDeclarations() throws RecognitionException {
		TypescriptAmbientDeclarationsContext _localctx = new TypescriptAmbientDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_typescriptAmbientDeclarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Declare) | (1L << Export) | (1L << Import) | (1L << Interface))) != 0)) {
				{
				{
				setState(150);
				declarationScriptElement();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(156);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationScriptElementContext extends ParserRuleContext {
		public AmbientModuleOrNamespaceContext ambientModuleOrNamespace() {
			return getRuleContext(AmbientModuleOrNamespaceContext.class,0);
		}
		public AmbientStatementContext ambientStatement() {
			return getRuleContext(AmbientStatementContext.class,0);
		}
		public LineEndContext lineEnd() {
			return getRuleContext(LineEndContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public ExportDefContext exportDef() {
			return getRuleContext(ExportDefContext.class,0);
		}
		public ImportDefContext importDef() {
			return getRuleContext(ImportDefContext.class,0);
		}
		public DeclarationScriptElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationScriptElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GenScalaFacadesFromTypescriptListener ) ((GenScalaFacadesFromTypescriptListener)listener).enterDeclarationScriptElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GenScalaFacadesFromTypescriptListener ) ((GenScalaFacadesFromTypescriptListener)listener).exitDeclarationScriptElement(this);
		}
	}

	public final DeclarationScriptElementContext declarationScriptElement() throws RecognitionException {
		DeclarationScriptElementContext _localctx = new DeclarationScriptElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarationScriptElement);
		try {
			setState(168);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Declare:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				match(Declare);
				setState(163);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(159);
					ambientModuleOrNamespace();
					}
					break;
				case 2:
					{
					{
					setState(160);
					ambientStatement();
					setState(161);
					lineEnd();
					}
					}
					break;
				}
				}
				break;
			case Interface:
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				interfaceDeclaration();
				}
				break;
			case Export:
				enterOuterAlt(_localctx, 3);
				{
				setState(166);
				exportDef();
				}
				break;
			case Import:
				enterOuterAlt(_localctx, 4);
				{
				setState(167);
				importDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExportDefContext extends ParserRuleContext {
		public AmbientStatementContext ambientStatement() {
			return getRuleContext(AmbientStatementContext.class,0);
		}
		public LineEndContext lineEnd() {
			return getRuleContext(LineEndContext.class,0);
		}
		public BindingIdentifierContext bindingIdentifier() {
			return getRuleContext(BindingIdentifierContext.class,0);
		}
		public ExportIdentifierContext exportIdentifier() {
			return getRuleContext(ExportIdentifierContext.class,0);
		}
		public ExportDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exportDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GenScalaFacadesFromTypescriptListener ) ((GenScalaFacadesFromTypescriptListener)listener).enterExportDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GenScalaFacadesFromTypescriptListener ) ((GenScalaFacadesFromTypescriptListener)listener).exitExportDef(this);
		}
	}

	public final ExportDefContext exportDef() throws RecognitionException {
		ExportDefContext _localctx = new ExportDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_exportDef);
		try {
			setState(182);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				match(Export);
				setState(171);
				match(Declare);
				setState(172);
				ambientStatement();
				setState(173);
				lineEnd();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(175);
				match(Export);
				setState(176);
				match(As);
				setState(177);
				match(T__0);
				setState(178);
				bindingIdentifier();
				setState(179);
				lineEnd();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(181);
				exportIdentifier();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDefContext extends ParserRuleContext {
		public ImportNameContext importName() {
			return getRuleContext(ImportNameContext.class,0);
		}
		public List<BindingIdentifierContext> bindingIdentifier() {
			return getRuleContexts(BindingIdentifierContext.class);
		}
		public BindingIdentifierContext bindingIdentifier(int i) {
			return getRuleContext(BindingIdentifierContext.class,i);
		}
		public LineEndContext lineEnd() {
			return getRuleContext(LineEndContext.class,0);
		}
		public ImportDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GenScalaFacadesFromTypescriptListener ) ((GenScalaFacadesFromTypescriptListener)listener).enterImportDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GenScalaFacadesFromTypescriptListener ) ((GenScalaFacadesFromTypescriptListener)listener).exitImportDef(this);
		}
	}

	public final ImportDefContext importDef() throws RecognitionException {
		ImportDefContext _localctx = new ImportDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(Import);
			setState(185);
			importName();
			setState(186);
			match(As);
			setState(187);
			bindingIdentifier();
			setState(188);
			match(From);
			setState(189);
			bindingIdentifier();
			setState(190);
			lineEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
